# kernel-on-hardware

./: .gitignore  CMakeLists.txt  README.md  copy.sh  toolchain.cmake
source/kernel/: CMakeLists.txt  ahci.c  interrupt.c  interrupt.h  interrupt.s  kernel.c  kernel_start.s  linker.ld  memory.c  memory.h  mtrr.c  mtrr.h  pci.c  pci.h  print.c  time.c  time.h  time.s
source/stub/: CMakeLists.txt  ehci.c  ehci.h  elf.c  elf.h  fs.c  fs.h  interrupt.h  interrupt.s  io.h  io.s  kernel.c  memory.c  memory.h  pci.c  pci.h  print.c  print.h  time.c  time.h  time.s
